added formula for calulating balance

--- a/balances.ipynb
+++ b/balances.ipynb
@@ -46,6 +46,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "marketData = pd.DataFrame(av.Market)\n",
     "merged = pd.merge(marketData, balanceResult,left_on='name',right_on='Currency')\n",
@@ -73,6 +80,7 @@
     "print(\"-------------------\")\n",
     "th = Trades.TradeHistory()\n",
     "dataTrades = th.get_from_Export(startDate=utils.date2nix(datetime(2021,1,1)))\n",
+    "dataTrades.sort_values('time')\n",
     "print(dataTrades.head())"
    ]
   },
@@ -94,6 +102,7 @@
     "print(\"-------------------\")\n",
     "ledger = Ledgers()\n",
     "dataLedger = ledger.get_from_Export(startDate=utils.date2nix(datetime(2021,1,1)))\n",
+    "dataLedger.sort_values('time')\n",
     "print(dataLedger.head())"
    ]
   },
@@ -111,10 +120,46 @@
    "outputs": [],
    "source": [
     "if(not dataLedger is None):\n",
-    "    mergedForBalance=pd.merge(dataLedger, balanceResult, left_on=\"asset\",right_on=\"Currency\", how=\"left\").sort_values(by=\"time\")\n",
-    "    mergedForBalance=mergedForBalance[~mergedForBalance[\"type\"].isin( [\"rollover\",\"margin\"])]\n",
-    "    mergedWithTrades = pd.merge(mergedForBalance,dataTrades[['txid','type','price','cost']],left_on=\"refid\",right_on=\"txid\")\n",
-    "    mergedWithTrades.reindex(mergedForBalance.index)"
+    "    ledger_trades = pd.merge(dataLedger,dataTrades[['txid','pair','type','price','cost']],left_on=\"refid\",right_on=\"txid\",how='outer')\n",
+    "    ledger_trades.sort_values('time')\n",
+    "    #ledger_trades.to_excel(\"ledgers_trades.xls\", engine='openpyxl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### example for calculating balance of ADA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    ada=ledger_trades[ledger_trades['asset']==\"ADA\"][['amount','fee']].agg('sum')\n",
+    "    print(ada['amount']-ada['fee'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### get price for direct deposits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groups = ledger_trades[(ledger_trades['asset'].isin(['ADA','ZEUR']))].groupby(['refid','type_x'])['txid_x']\n",
+    "for key,g in groups:\n",
+    "    if(key[1]=='receive'):\n",
+    "        print(ledger_trades[ledger_trades['refid']==key[0]][['asset','type_x','amount','balance']])\n",
+    "    "
    ]
   }
  ],
