added general calculation to spot balance

--- a/balances.ipynb
+++ b/balances.ipynb
@@ -81,7 +81,7 @@
     "th = Trades.TradeHistory()\n",
     "dataTrades = th.get_from_Export(startDate=utils.date2nix(datetime(2021,1,1)))\n",
     "dataTrades.sort_values('time')\n",
-    "print(dataTrades.head())"
+    "#print(dataTrades.head())"
    ]
   },
   {
@@ -103,7 +103,7 @@
     "ledger = Ledgers()\n",
     "dataLedger = ledger.get_from_Export(startDate=utils.date2nix(datetime(2021,1,1)))\n",
     "dataLedger.sort_values('time')\n",
-    "print(dataLedger.head())"
+    "#print(dataLedger.head())"
    ]
   },
   {
@@ -129,7 +129,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### example for calculating balance of ADA"
+    "### example for calculating balance of current spots"
    ]
   },
   {
@@ -138,8 +138,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    ada=ledger_trades[ledger_trades['asset']==\"ADA\"][['amount','fee']].agg('sum')\n",
-    "    print(ada['amount']-ada['fee'])"
+    "    spotDict=dict()\n",
+    "    for asset in balanceResult['Currency']:\n",
+    "        assetItem=ledger_trades[ledger_trades['asset']==asset][['amount','fee']].agg('sum')\n",
+    "        spotDict[asset]=assetItem[\"amount\"]-assetItem[\"fee\"]\n",
+    "    spotBalances= pd.Series(spotDict)\n",
+    "    print(spotBalances)"
    ]
   },
   {
@@ -155,10 +159,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "groups = ledger_trades[(ledger_trades['asset'].isin(['ADA','ZEUR']))].groupby(['refid','type_x'])['txid_x']\n",
+    "groups = ledger_trades[(ledger_trades['asset'].isin(['ADA']))].groupby(['refid','type_x'])['txid_x']\n",
+    "df = pd.DataFrame.empty\n",
     "for key,g in groups:\n",
     "    if(key[1]=='receive'):\n",
-    "        print(ledger_trades[ledger_trades['refid']==key[0]][['asset','type_x','amount','balance']])\n",
+    "        df=ledger_trades[ledger_trades['refid']==key[0]][['asset','type_x','amount','balance']]\n",
+    "if(not df.empty): \n",
+    "    spend =  df[df['type_x']=='spend']\n",
+    "    ledger_trades.loc[spend.index, 'cost']=ledger_trades.loc[spend.index,'amount'].abs()\n",
+    "    print(ledger_trades.iloc[spend.index])\n",
+    "    \n",
     "    "
    ]
   }
